# TxtAndPcdTransform

./: .gitignore  README.md
data/pcd/: piano.pcd
data/txt/: piano.txt
pcd_to_txt/: package.xml
pcd_to_txt/include/pcd_to_txt/: pcd_to_txt.hpp
pcd_to_txt/launch/: pcd_to_txt.launch.py
pcd_to_txt/src/: pcd_to_txt.cpp
src/pcd_to_txt/: CMakeLists.txt
src/txt_to_pcd/: package.xml
src/txt_to_pcd/launch/: txt_to_pcd.launch.py
src/txt_to_pcd/src/: txt_to_pcd.cpp
txt_to_pcd/: CMakeLists.txt
txt_to_pcd/include/txt_to_pcd/: txt_to_pcd.hpp
txt_to_pcd/launch/: txt_to_pcd.launch.py
txt_to_pcd/src/: txt_to_pcd.cpp
